output.txt
1000-sort_deck.c:1:1: error: expected identifier or ‘(’ before ‘.’ token
    1 | .#include "deck.h"
      | ^
1000-sort_deck.c:1:2: error: stray ‘#’ in program
    1 | .#include "deck.h"
      |  ^
In file included from /usr/include/stdio.h:43,
                 from 1000-sort_deck.c:2:
/usr/include/x86_64-linux-gnu/bits/types/struct_FILE.h:95:3: error: unknown type name ‘size_t’
   95 |   size_t __pad5;
      |   ^~~~~~
/usr/include/x86_64-linux-gnu/bits/types/struct_FILE.h:98:67: error: ‘size_t’ undeclared here (not in a function)
   98 |   char _unused2[15 * sizeof (int) - 4 * sizeof (void *) - sizeof (size_t)];
      |                                                                   ^~~~~~
/usr/include/x86_64-linux-gnu/bits/types/struct_FILE.h:1:1: note: ‘size_t’ is defined in header ‘<stddef.h>’; did you forget to ‘#include <stddef.h>’?
  +++ |+#include <stddef.h>
    1 | /* Copyright (C) 1991-2020 Free Software Foundation, Inc.
In file included from 1000-sort_deck.c:2:
/usr/include/stdio.h:292:35: error: expected declaration specifiers or ‘...’ before ‘size_t’
  292 | extern FILE *fmemopen (void *__s, size_t __len, const char *__modes)
      |                                   ^~~~~~
/usr/include/stdio.h:298:47: error: expected declaration specifiers or ‘...’ before ‘size_t’
  298 | extern FILE *open_memstream (char **__bufloc, size_t *__sizeloc) __THROW __wur;
      |                                               ^~~~~~
/usr/include/stdio.h:309:20: error: expected declaration specifiers or ‘...’ before ‘size_t’
  309 |       int __modes, size_t __n) __THROW;
      |                    ^~~~~~
/usr/include/stdio.h:315:10: error: expected declaration specifiers or ‘...’ before ‘size_t’
  315 |          size_t __size) __THROW;
      |          ^~~~~~
/usr/include/stdio.h:354:44: error: expected declaration specifiers or ‘...’ before ‘size_t’
  354 | extern int snprintf (char *__restrict __s, size_t __maxlen,
      |                                            ^~~~~~
/usr/include/stdio.h:358:45: error: expected declaration specifiers or ‘...’ before ‘size_t’
  358 | extern int vsnprintf (char *__restrict __s, size_t __maxlen,
      |                                             ^~~~~~
/usr/include/stdio.h:604:30: error: expected declaration specifiers or ‘...’ before ‘size_t’
  604 |                              size_t *__restrict __n, int __delimiter,
      |                              ^~~~~~
/usr/include/stdio.h:607:28: error: expected declaration specifiers or ‘...’ before ‘size_t’
  607 |                            size_t *__restrict __n, int __delimiter,
      |                            ^~~~~~
/usr/include/stdio.h:617:27: error: expected declaration specifiers or ‘...’ before ‘size_t’
  617 |                           size_t *__restrict __n,
      |                           ^~~~~~
/usr/include/stdio.h:646:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fread’
  646 | extern size_t fread (void *__restrict __ptr, size_t __size,
      |               ^~~~~
/usr/include/stdio.h:652:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fwrite’
  652 | extern size_t fwrite (const void *__restrict __ptr, size_t __size,
      |               ^~~~~~
/usr/include/stdio.h:673:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fread_unlocked’
  673 | extern size_t fread_unlocked (void *__restrict __ptr, size_t __size,
      |               ^~~~~~~~~~~~~~
/usr/include/stdio.h:675:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fwrite_unlocked’
  675 | extern size_t fwrite_unlocked (const void *__restrict __ptr, size_t __size,
      |               ^~~~~~~~~~~~~~~
1000-sort_deck.c: In function ‘_str_cmp’:
1000-sort_deck.c:13:8: error: expected ‘;’ before ‘i’
   13 |  size_t i = 0;
      |        ^~
      |        ;
1000-sort_deck.c:17:14: error: ‘i’ undeclared (first use in this function)
   17 |  while (str1[i])
      |              ^
1000-sort_deck.c:17:14: note: each undeclared identifier is reported only once for each function it appears in
1000-sort_deck.c:11:38: error: parameter ‘str2’ set but not used [-Werror=unused-but-set-parameter]
   11 | int _str_cmp(const char *str1, char *str2)
      |                                ~~~~~~^~~~
1000-sort_deck.c: At top level:
1000-sort_deck.c:34:24: error: unknown type name ‘deck_node_t’
   34 | int get_card_positions(deck_node_t *node)
      |                        ^~~~~~~~~~~
1000-sort_deck.c:63:1: error: unknown type name ‘deck_node_t’
   63 | deck_node_t *swap_cards(deck_node_t *card, deck_node_t **deck)
      | ^~~~~~~~~~~
1000-sort_deck.c:63:25: error: unknown type name ‘deck_node_t’
   63 | deck_node_t *swap_cards(deck_node_t *card, deck_node_t **deck)
      |                         ^~~~~~~~~~~
1000-sort_deck.c:63:44: error: unknown type name ‘deck_node_t’
   63 | deck_node_t *swap_cards(deck_node_t *card, deck_node_t **deck)
      |                                            ^~~~~~~~~~~
1000-sort_deck.c:87:27: error: unknown type name ‘deck_node_t’
   87 | void insertion_sorts_deck(deck_node_t **deck)
      |                           ^~~~~~~~~~~
1000-sort_deck.c:120:16: error: unknown type name ‘deck_node_t’
  120 | void sort_deck(deck_node_t **deck)
      |                ^~~~~~~~~~~
cc1: all warnings being treated as errors
